Added projects section.
(For brukflix there needs to be a youtube video)

--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,9 @@
   --background: #ffffff;
   --foreground: #171717;
 }
+html {
+  scroll-behavior: smooth;
+}
 
 @media (prefers-color-scheme: dark) {
   :root {
